--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,46 +3,12 @@ stages:          # List of stages for jobs, and their order of execution
   - test
   - deploy
 
-include:
-  -
+backend-trigger:
+  trigger:
+    include:
+      - gitlab-templates/backend.yml
 
-build-job:       # This job runs in the build stage, which runs first.
-  stage: build
-  tags: 
-    - projectidx
-  script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
-
-unit-test-job:   # This job runs in the test stage.
-  stage: test    # It only starts when the job in the build stage completes successfully.
-  tags: 
-    - projectidx
-  script:
-    - echo "Running unit tests... This will take about 60 seconds."
-
-lint-test-job:   # This job also runs in the test stage.
-  stage: test    # It can run at the same time as unit-test-job (in parallel).
-  tags: 
-    - projectidx
-  script:
-    - echo "Linting code... This will take about 10 seconds."
-    - echo "No lint issues found."
-
-deploy-job:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
-  tags: 
-    - projectidx
-  script:
-    - echo "Deploying application..."
-    - echo "123"
-
-fetch:      # This job runs in the deploy stage.
-  stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
-  environment: production
-  tags: 
-    - projectidx
-  script:
-    - echo "fetch application..."
-    - echo "9999"
+frontend-trigger:
+  trigger:
+    include:
+      - gitlab-templates/frontend.yml
