--- a/gitlab-templates/base-line.yml
+++ b/gitlab-templates/base-line.yml
@@ -1,10 +1,11 @@
-rules:
-  - if: '$CI_PIPELINE_SOURCE == "push"' 
-    when: never
-  - if: $CI_COMMIT_TAG
-    when: never
-  - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-    changes:
-      - $RULES_CHANGES_PATH
-  - when: manual
-    allow_failure: true
+.base-lines:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "push"' 
+      when: never
+    - if: $CI_COMMIT_TAG
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      changes:
+        - $RULES_CHANGES_PATH
+    - when: manual
+      allow_failure: true
