--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,20 @@
 stages:          # List of stages for jobs, and their order of execution
-  - build
-  - test
-  - deploy
+  - trigger
 
 backend-trigger:
+  stage: trigger
   trigger:
     include:
       - gitlab-templates/backend.yml
+  rules:
+    - changes:
+      - "backend/**/*"
 
 frontend-trigger:
+  stage : trigger
   trigger:
     include:
       - gitlab-templates/frontend.yml
+  rules:
+    - changes:
+      - "frontend/**/*"
