--- a/gitlab-templates/frontend.yml
+++ b/gitlab-templates/frontend.yml
@@ -1,16 +1,13 @@
 stages:
   - build
   - test
-  - deploy
 
-include:
-  - base-line.yml
+include: 
+  - gitlab-templates/base-line.yml
 
 .frontend:
   extends: 
     - .base-line
-  variables:
-    RULES_CHANGES_PATH: /../frontend/**/*
 
 build-job:
   stage: build
@@ -20,8 +17,8 @@ build-job:
     - echo "build phase"
 
 test-job:
-  stage: build
+  stage: test
   extends: 
-    - base-line.yml
+    - .frontend
   script:
     - echo "test phase"
