Add dev pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,3 +18,12 @@ frontend-trigger:
   rules:
     - changes:
       - "frontend/**/*"
+
+dev-trigger:
+  stage : trigger
+  trigger:
+    include:
+      - gitlab-templates/dev.yml
+  rules:
+    - changes:
+      - "/**/*"
