--- a/gitlab-templates/frontend.yml
+++ b/gitlab-templates/frontend.yml
@@ -1,3 +1,14 @@
+default:
+  image: docker:27
+  services:
+    - docker:27-dind
+  before_script: 
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
+variables: 
+  DOCKER_HOST: tcp://docker:2376
+  DOCKER_TLS_CERTDIR: "/certs"
+
 stages:
   - build
   - test
@@ -14,7 +25,10 @@ build-job:
   extends: 
     - .frontend
   script:
-    - echo "build phase"
+    - docker pull $CI_REGISTRY_IMAGE:frontend-latest || true
+    - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from $CI_REGISTRY_IMAGE:frontend-latest --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:frontend-latest frontend/
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE:frontend-latest
 
 test-job:
   stage: test
