--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,13 @@
 FROM node:22-alpine
 
-WORKDIR app/
+WORKDIR /app
 
 COPY package*.json ./
 RUN npm install
+RUN npm run build
 
 COPY . . 
 
-EXPOSE 3000
+EXPOSE 3005
 CMD ["npm", "start"]
 
