--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,14 @@
-FROM node:22-alpine
+FROM node:22.6.0-alpine3.19
 
 WORKDIR /app
+RUN chown -R node:node /app
+USER node
 
-COPY package*.json ./
+COPY --chown=node:node package*.json ./
 RUN npm install
-RUN npm run build
 
-COPY . . 
+COPY --chown=node:node . . 
+RUN npm run build
 
 EXPOSE 3005
 CMD ["npm", "start"]
