--- a/gitlab-templates/frontend.yml
+++ b/gitlab-templates/frontend.yml
@@ -57,6 +57,10 @@ lint-test:
 
 code-quality:
   stage: review
+  inherit:
+    default:
+      - image
+      - services
   extends: 
     - .frontend
   image: 
