Chore(frontend pipeline, Footer, Hero, Layout): Change title layout, responsive type footer, hero, fix frontend pipeline

--- a/gitlab-templates/frontend.yml
+++ b/gitlab-templates/frontend.yml
@@ -71,5 +71,5 @@ code-quality:
     paths:
       - .sonar/cache
   script:
-    - cd /frontend
+    - cd frontend/
     - sonar-scanner -Dsonar.login=$SONAR_LOGIN -Dsonar.host.url=https://sonarcloud.io/ -Dsonar.sources=.
