--- a/gitlab-templates/frontend.yml
+++ b/gitlab-templates/frontend.yml
@@ -72,4 +72,4 @@ code-quality:
       - .sonar/cache
   script:
     - cd frontend/
-    - sonar-scanner -Dsonar.login=$SONAR_LOGIN -Dsonar.host.url=https://sonarcloud.io/ -Dsonar.sources=.
+    - sonar-scanner -Dsonar.token=$SONAR_LOGIN -Dsonar.host.url=https://sonarcloud.io/ -Dsonar.sources=.
