Fix(frontend): Make all test cases are pass

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 services:
   client:
-    # image: registry.gitlab.com/ou-kb/oudocumenthub:frontend-latest
+    image: registry.gitlab.com/ohka391/oudocumenthub:frontend-latest
     #local build
-    build: frontend/
+    # build: frontend/
     ports:
       - "3005:3005"
     volumes: 
       - ./coverage:/app/coverage
       - ./test-report:/app/test-report
+    restart: unless-stopped
