--- a/frontend/sonar-project.properties
+++ b/frontend/sonar-project.properties
@@ -1,6 +1,8 @@
-sonar.projectKey=OhKa39_OUDocumentHub_Frontend
+sonar.projectKey=ohka39_ou_documenthub_frontend
 sonar.organization=ohka39
 sonar.source=.
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.exclusions= node_modules/**/*, .dockerignore, Dockerfile, .gitignore, test-report/**/*, coverage/**/*, .git, **/__tests_/**
+sonar.test.inclusions=**/*.test.ts,**/*.spec.ts
+sonar.coverage.exclusions=**/*.js
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.exclusions= node_modules/**/*, .dockerignore, Dockerfile, .gitignore, test-report/**/*, coverage/**/*, .git, **/__tests__/**
 sonar.sourceEncoding=UTF-8
