--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,24 @@ services:
       - ./coverage:/app/coverage
       - ./test-report:/app/test-report
     restart: unless-stopped
+
+  db:
+    image: postgres
+    ports: 
+      - "5432:5432"
+    restart: unless-stopped
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - db_volumes:/var/lib/postgresql/data
+    networks:
+      - db
+
+volumes:
+  db_volumes:
+
+networks:
+  db:
+    driver: bridge
