Refactor(gitlab-pipeline, docker-compose): Add backend pipeline

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,19 @@
-# Stage 1: Build
-FROM maven:3.8.6-jdk-11 AS build
+# Stage 1: Build for dev
+FROM maven:3.9.9-amazoncorretto-21 AS build-dev
+WORKDIR /app
+COPY pom.xml .
+COPY src /app/src
+RUN mvn package
+
+# Stage 2: Build for prod
+FROM maven:3.9.9-amazoncorretto-21 AS build-prod
 WORKDIR /app
 COPY pom.xml .
 COPY src /app/src
 RUN mvn package -DskipTests
 
-# Stage 2: Runtime
-FROM openjdk:11-jre-slim
+# Stage 3: Runtime prod
+FROM openjdk:21-jdk as runtime
 WORKDIR /app
 COPY --from=build /app/target/*.jar /app/
 CMD ["java", "-jar", "your-app.jar"]
