--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   client:
-    # image: registry.gitlab.com/ohka391/oudocumenthub:frontend-latest
+    image: registry.gitlab.com/ohka391/oudocumenthub:frontend-latest
     #local build
-    build: frontend/
+    # build: frontend-branch/frontend/ #git worktree of frontend
     ports:
       - "3005:3005"
     volumes: 
@@ -11,11 +11,13 @@ services:
     restart: unless-stopped
     networks:
       - app
+    environment:
+      - API_URL=${API_URL}
 
   backend:
-    # image: registry.gitlab.com/ohka391/oudocumenthub:backend-latest
+    image: registry.gitlab.com/ohka391/oudocumenthub:backend-latest
     #local build
-    build: frontend/
+    # build: backend/
     restart: unless-stopped
     depends_on:
       db:
