--- a/gitlab-templates/backend.yml
+++ b/gitlab-templates/backend.yml
@@ -1,3 +1,14 @@
+default:
+  image: docker:27
+  services:
+    - docker:27-dind
+  before_script: 
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
+variables: 
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_TLS_CERTDIR: ""
+
 stages:
   - build
   - test
@@ -9,12 +20,15 @@ include:
   extends: 
     - .base-line
 
-build-job:
+build:
   stage: build
   extends: 
     - .backend
   script:
-    - echo "build phase"
+    - docker pull $CI_REGISTRY_IMAGE:backend-latest || true
+    - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from $CI_REGISTRY_IMAGE:backend-latest --target build-base --tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA --tag $CI_REGISTRY_IMAGE:backend-latest backend/
+    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
+    - docker push $CI_REGISTRY_IMAGE:backend-latest
 
 test-job:
   stage: test
