--- a/gitlab-templates/frontend.yml
+++ b/gitlab-templates/frontend.yml
@@ -1,6 +1,6 @@
 default:
   image: docker:27
-  image: npm:latest
+  image: node:22.6.0-alpine3.19
   services:
     - docker:27-dind
   before_script:
@@ -15,6 +15,7 @@ stages:
   - test
   - review
   - build
+  - build
 
 include:
   - gitlab-templates/base-line.yml
@@ -24,7 +25,6 @@ include:
     - .base-line
 
 install_packages:
-  image: node:22.6.0-alpine3.19
   stage: install
   script:
     - cd frontend/
@@ -47,6 +47,8 @@ unit-test:
   script:
     - cd frontend/
     - npm run test:coverage
+    - cd frontend/
+    - npm run test:coverage
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
   dependencies:
     - install_packages
@@ -63,6 +65,8 @@ lint-test:
   dependencies:
     - install_packages
   script:
+    - cd frontend/
+    - npm run lint
     - cd frontend/
     - npm run lint
 
