Feat(frontend-auth): Add verify sign up page

--- a/gitlab-templates/frontend.yml
+++ b/gitlab-templates/frontend.yml
@@ -15,7 +15,6 @@ stages:
   - test
   - review
   - build
-  - build
 
 include:
   - gitlab-templates/base-line.yml
@@ -91,12 +90,13 @@ code-quality:
     - mv test-report coverage frontend/
     - cd frontend/
     - sonar-scanner -Dsonar.token=$SONAR_TOKEN -Dsonar.host.url=https://sonarcloud.io/ -Dsonar.sources=.
-# build:
-#   stage: build
-#   extends:
-#     - .frontend
-#   script:
-#     - docker pull $CI_REGISTRY_IMAGE/frontend:latest || true
-#     - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from $CI_REGISTRY_IMAGE/frontend:latest --tag $CI_REGISTRY_IMAGE/frontend:latest $CI_REGISTRY_IMAGE/frontend:$CI_COMMIT_SHORT_SHA frontend/
-#     - docker push $CI_REGISTRY_IMAGE/frontend:latest
-#     - docker push $CI_REGISTRY_IMAGE/frontend:$CI_COMMIT_SHORT_SHA
+    
+build:
+  stage: build
+  extends:
+    - .frontend
+  script:
+    - docker pull $CI_REGISTRY_IMAGE/frontend:latest || true
+    - docker build --build-arg BUILDKIT_INLINE_CACHE=1 --cache-from $CI_REGISTRY_IMAGE/frontend:latest --tag $CI_REGISTRY_IMAGE/frontend:latest $CI_REGISTRY_IMAGE/frontend:$CI_COMMIT_SHORT_SHA frontend/
+    - docker push $CI_REGISTRY_IMAGE/frontend:latest
+    - docker push $CI_REGISTRY_IMAGE/frontend:$CI_COMMIT_SHORT_SHA
