--- a/gitlab-templates/backend.yml
+++ b/gitlab-templates/backend.yml
@@ -2,10 +2,10 @@ default:
   image: docker:27
   services:
     - docker:27-dind
-  before_script: 
+  before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 
-variables: 
+variables:
   DOCKER_HOST: tcp://docker:2375
   DOCKER_TLS_CERTDIR: ""
 
@@ -17,22 +17,22 @@ include:
   - gitlab-templates/base-line.yml
 
 .backend:
-  extends: 
+  extends:
     - .base-line
 
 unit-test:
   stage: test
-  extends: 
+  extends:
     - .backend
   script:
     - echo "test phase"
-  artifacts:
-    when: always
-    coverage: /Total.*?([0-9]{1,3})%/
+  # artifacts:
+  #   when: always
+  #   coverage: /Total.*?([0-9]{1,3})%/
 
 build:
   stage: build
-  extends: 
+  extends:
     - .backend
   script:
     - docker pull $CI_REGISTRY_IMAGE/backend:latest || true
