Feat(frontend-cart): Add edit information, cart template

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -19,3 +19,11 @@ GOOGLE_CLIENTSECRET: ${GOOGLE_CLIENTSECRET}
 
 FACEBOOK_CLIENTID: ${FACEBOOK_CLIENTID}
 FACEBOOK_CLIENTSECRET: ${FACEBOOK_CLIENTSECRET}
+
+AWS_ACCESS_KEY: ${AWS_ACCESS_KEY}
+AWS_SECRET_KEY: ${AWS_SECRET_KEY}
+AWS_REGION: ${AWS_REGION}
+AWS_BUCKET_NAME: ${AWS_BUCKET_NAME}
+
+IS_INITDB: false
+IS_RUNDB_SCRIPT: never
