--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -12,7 +12,13 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
-    hibernate.ddl-auto: update
+    hibernate.ddl-auto: none
+    defer-datasource-initialization: ${IS_INITDB}
+
+  sql:
+    init:
+      schema-locations: classpath:/schema.sql
+      mode: ${IS_RUNDB_SCRIPT}
 
   data:
     redis:
@@ -31,6 +37,11 @@ spring:
     username: ${MAIL_USERNAME}
     password: ${MAIL_PASSWORD}
 
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
   security:
     oauth2:
       client:
@@ -38,7 +49,12 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENTID}
             client-secret: ${GOOGLE_CLIENTSECRET}
-            scope: openid,profile,email
+            scope:
+              - openid
+              - profile
+              - email
+              - https://www.googleapis.com/auth/user.birthday.read
+              - https://www.googleapis.com/auth/user.gender.read
           facebook:
             client-id: ${FACEBOOK_CLIENTID}
             client-secret: ${FACEBOOK_CLIENTSECRET}
@@ -61,6 +77,14 @@ logging:
     org:
       springframework:
         security: DEBUG
+
+aws:
+  s3:
+    access-key: ${AWS_ACCESS_KEY}
+    secret-key: ${AWS_SECRET_KEY}
+    region: ${AWS_REGION}
+    bucket-name: ${AWS_BUCKET_NAME}
+    enabled: true
 
 #app variable
 frontend:
