--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -114,6 +114,15 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.3.3</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.772</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
  </dependencies>
 
 	<build>
