--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,9 +33,11 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "debounce": "^2.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "frontend": "file:",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.427.0",
     "next": "^14.2.5",
     "react": "^18",
