--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.1",
     "@sentry/nextjs": "^8.30.0",
+    "@stomp/stompjs": "^7.0.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
@@ -39,7 +40,7 @@
     "frontend": "file:",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.427.0",
-    "next": "^14.2.5",
+    "next": "^14.2.15",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
