Refactor(backend): refactor code for payment

--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -33,3 +33,5 @@ PAYPAL_SECRETID: ${NEXT_PUBLIC_PAYPAL_SECRET}
 PAYPAL_WEBHOOKID: ${PAYPAL_WEBHOOKID}
 PAYPAL_MERCHANT_ID: ${NEXT_PUBLIC_PAYPAL_MERCHANT_ID}
 PAYPAL_BN_CODE: ${PAYPAL_BN_CODE}
+
+EXCHANGE_RATE_TOKEN: ${EXCHANGE_RATE_TOKEN}
